// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button/Base Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm edcsHv"
    onClick={[Function]}
    size="sm"
  >
    click
  </button>
</div>
`;

exports[`Storyshots Button/Cookie Base 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm hizmlE"
    onClick={[Function]}
    size="md"
  >
    <p
      className="sc-AxirZ icJVKj"
    >
      ok
    </p>
  </button>
</div>
`;

exports[`Storyshots Button/Search Large 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm lgFYQH"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="sc-AxhCb gthXWM"
    >
      <div
        className="sc-AxiKw bcHzLP"
      >
        <svg
          stroke="white"
          strokeWidth={2}
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxirZ crmARo"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Button/Search Medium 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm cOkpuk"
    onClick={[Function]}
    size="md"
  >
    <div
      className="sc-AxhCb gthXWM"
    >
      <div
        className="sc-AxiKw bcHzLP"
      >
        <svg
          stroke="white"
          strokeWidth={2}
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxirZ crmARo"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Button/Search Small 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": "100vh",
      "justifyContent": "center",
    }
  }
>
  <button
    className="sc-AxjAm fBfXiy"
    onClick={[Function]}
    size="sm"
  >
    <div
      className="sc-AxhCb gthXWM"
    >
      <div
        className="sc-AxiKw bcHzLP"
      >
        <svg
          stroke="white"
          strokeWidth={2}
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxirZ crmARo"
      >
        Search
      </p>
    </div>
  </button>
</div>
`;
